# taipower-tou-web

./: .gitignore  ACCESSIBILITY_IMPROVEMENTS.md  CODEBASE_ANALYSIS.md  FINAL_REPORT.md  FRONTEND-FIXES.md  FRONTEND-TOOLS.md  README.md  package-lock.json  problem.md  pyproject.toml  start-web.sh  test-calculation-accuracy.mjs  test-comprehensive.mjs
.claude/: .session  ralph-loop.local.md
.github/workflows/: deploy.yml
backend/: main.py
backend/api/: __init__.py  calculations.py  plans.py  upload.py
backend/models/: __init__.py  requests.py  responses.py
backend/services/: __init__.py  (+2 more)
docs/: COMPLETE_SCENARIO_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  MISSING_DATA_SOLUTION.md  PROJECT_STATUS.md  SPEC.md  web_feature_risk_register.md
examples/: csv_import.py  household.py  plan_comparison.py  sample_usage_data.csv
frontend/: README.md  TEST_SUMMARY.md  check-low-voltage.mjs  check-plans.mjs  check.mjs  checklist.mjs  complete-test.mjs  comprehensive-test.mjs  debug-test.mjs  dev-tools.sh  diagnose.mjs  fe-loop.mjs  fe-workspace.mjs  index.html  interactive-tool.mjs  live-preview.mjs  manual-test.mjs  open-browser.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-all-functions.mjs  test-app.mjs  test-calculation.mjs  test-edge-cases.mjs  test-features.mjs  test-ocr.mjs  test.mjs  verify-plans.mjs  vite.config.ts
reviews/: code-review-1.md  code-review-2.md  ralph-review-1.md  ralph-review-2.md  ralph-review-3.md  ralph-review-4.md
tests/: test_api_calculate.py  test_api_upload.py  test_regression_r1_r5.py  test_web_e2e.py
(+117 files in other folders)
